--- a/Index.html
+++ b/Index.html
@@ -9,7 +9,7 @@
 <body>
 
 <h2>Contact Us</h2>
-<p>Please fill out the form below to contact us thank you:</p>
+<p>Please fill out the form below to contact us</p>
 
 
 <form action="mailto:your@email.com" method="post" enctype="text/plain">
